--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,7 +1,8 @@
 source-file ~/.config/tmux/tmux-reset.conf
 set-option -g default-terminal 'tmux-256color'
 set-option -g terminal-overrides ',xterm-256color:RGB'
-
+set-option -g automatic-rename off
+set-option -g allow-rename off
 
 set -g mouse on 
 set -g prefix ^A
@@ -29,6 +30,7 @@ set -g @plugin 'fcsonline/tmux-thumbs'
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'wfxr/tmux-fzf-url'
 set -g @plugin 'catppuccin/tmux#v2.1.3'
+set -g @plugin 'tmux-plugins/tmux-cpu'
 
 set -g @floax-width '80%'
 set -g @floax-height '80%'
@@ -39,7 +41,10 @@ set -g @floax-change-path 'true'
 set -g @sessionx-bind-zo-new-window 'ctrl-y'
 set -g @sessionx-auto-accept 'off'
 
-
+set -g @sessionx-auto-accept 'off'
+#set -g @sessionx-custom-paths ~/dotfiles/
+set -g @sessionx-bind 'o'
+set -g @sessionx-x-path ~/dotfiles/
 set -g @sessionx-window-height '85%'
 set -g @sessionx-window-width '75%'
 set -g @sessionx-zoxide-mode 'on'
@@ -73,9 +78,12 @@ set -g status-left-length 100
 #set -g @catppuccin_directory_text "#{pane_current_path}"
 set -g status-right "#{E:@catppuccin_status_application}"
 set -g status-right "#{E:@catppuccin_status_directory}"
-
+# in .tmux.conf
+set -g status-right '#{@catppuccin_cpu_icon} #{cpu_percentage} GPU: #{gpu_percentage} '
 #set -ag status-right "󰉋 #{pane_current_path}"
 set -ag status-right "#{E:@catppuccin_status_session}"
+#set -ag status-right "#{E:@catppuccin_status_cpu}"
+
 #set -ag status-right "#{E:@catppuccin_status_uptime}"
 # set -agF status-right "#{E:@catppuccin_status_battery}"
 
