--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -49,7 +49,7 @@ cyan = "#94e2d5"
 white = "#a6adc8"
 
 [shell]
-program = "/usr/bin/bash"
+program = "/home/shoney/.cargo/bin/nu"
 args = ["--login"]
 
 [keyboard]
