tmux settings update

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,6 +3,7 @@ set-option -g default-terminal 'tmux-256color'
 set-option -g terminal-overrides ',xterm-256color:RGB'
 set-option -g automatic-rename off
 set-option -g allow-rename off
+#set-option -g default-command "/home/shoney/.cargo/bin/nu --login"
 
 set -g mouse on 
 set -g prefix ^A
