--- a/tmux/.config/tmux/tmux-reset.conf
+++ b/tmux/.config/tmux/tmux-reset.conf
@@ -34,6 +34,7 @@ bind P set pane-border-status
 bind c kill-pane
 bind x swap-pane -D
 bind -n M-s choose-session
+bind C-p display-popup -E "nvim ~/.bashrc"
 bind R source-file ~/.tmux.conf
 bind K send-keys "clear"\; send-keys "Enter"
 bind-key -T copy-mode-vi v send-keys -X begin-selection
