--- a/tmux/.config/tmux/tmux-reset.conf
+++ b/tmux/.config/tmux/tmux-reset.conf
@@ -35,6 +35,7 @@ bind c kill-pane
 bind x swap-pane -D
 bind -n M-s choose-session
 bind C-p display-popup -E "nvim ~/.bashrc"
+bind C-l display-popup -E -w 90% -h 90% "/home/shoney/.local/bin/lazydocker"
 bind R source-file ~/.tmux.conf
 bind K send-keys "clear"\; send-keys "Enter"
 bind-key -T copy-mode-vi v send-keys -X begin-selection
