--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -62,13 +62,20 @@ font-5 = ${fonts.nerd}
 font-6 = ${fonts.opensansboldhigh}
 
 wm-restack = i3
-tray-position = left
+#tray-position = left
 
-modules-left = workspaces xkbstates xkillapp settings appfilemanager mediaplayer
+modules-left = workspaces tray
 modules-center = date media
-modules-right = layout temperature memory memoryswap cpu battery brightness sound wifi powermenu
+modules-right =  memory  battery  sound wifi powermenu
 
+[module/tray]
+type = internal/tray
 
+format-margin = 8px
+tray-spacing = 8px
+tray-position = left
+tray-padding = 10           ; Increase padding (try 6–12)
+tray-background = #00000000 ; Optional: transparent background
 ;Date correction
 [module/date]
 type = internal/date
@@ -291,45 +298,30 @@ click-left = sh ~/.config/i3/powermenu.sh
 ;Battery Indicator
 [module/battery]
 type = internal/battery
-battery = BAT1
+battery = BAT0
 full-at = 100
 
 format-charging = <animation-charging> <label-charging>
-format-charging-padding = 2
-format-charging-underline = ${colors.menucol-orange}
+format-discharging = <ramp-capacity> <label-discharging>
+label-full = %percentage%
+label-charging = %percentage%%
+label-discharging = %percentage%%
+ramp-capacity-0 = 
+ramp-capacity-0-foreground = ${colors.alert}
+ramp-capacity-1 = 
+ramp-capacity-1-foreground = ${colors.warning}
+ramp-capacity-2 = 
+ramp-capacity-3 = 
+ramp-capacity-4 = 
+ramp-capacity-foreground = ${colors.foreground-alt}
 
-format-discharging = <animation-discharging> <label-discharging>
-format-discharging-padding = 2
-format-discharging-underline = ${colors.menucol-orange}
-
-label-charging = %percentage%
-label-charging-font = 3
-
-label-discharging = %percentage%
-label-discharging-font = 3
-
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
-animation-charging-3 = 
-animation-charging-4 = 
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
+animation-charging-3 = 
+animation-charging-4 = 
+animation-charging-foreground = ${colors.foreground-alt}
 animation-charging-framerate = 750
-animation-charging-foreground = ${colors.menucol-orange}
-
-animation-discharging-0 = 
-animation-discharging-1 = 
-animation-discharging-2 = 
-animation-discharging-3 = 
-animation-discharging-4 = 
-animation-discharging-5 = 
-animation-discharging-6 = 
-animation-discharging-7 = 
-animation-discharging-8 = 
-animation-discharging-9 = 
-animation-discharging-framerate = 750
-animation-discharging-foreground = ${colors.menucol-orange}
-
-
 [module/cpu]
 type = internal/cpu
 interval = 0.5
@@ -375,6 +367,7 @@ label-font = 3
 [module/temperature]
 type = internal/temperature
 interval = 0.5
+hwmon-path = /sys/class/hwmon/hwmon9/temp1_input
 format = <ramp> <label>
 format-padding = 2
 format-underline = ${colors.menucol-deepblue}
