--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -10,8 +10,8 @@
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
 set $mod Mod4
-gaps inner 5
-gaps outer 5
+gaps inner 1
+gaps outer 1
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 font pango:monospace 8
@@ -69,10 +69,12 @@ tiling_drag modifier titlebar
 bindsym $mod+Return exec alacritty 
 
 # kill focused window
-bindsym $mod+Shift+q kill
+bindsym $mod+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id rofi -show drun
+bindsym $mod+d exec --no-startup-id rofi -show drun -theme Arc-Dark 
+# bindsym $mod+s exec --no-startup-id /home/shoney/.config/rofi/ssh-tmux-launcher.sh
+
 # A more modern dmenu replacement is rofi:
 # bindcode $mod+40 exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
