--- a/tmux/.config/tmux/tmux-reset.conf
+++ b/tmux/.config/tmux/tmux-reset.conf
@@ -17,8 +17,8 @@ bind z resize-pane -Z
 bind ^L refresh-client
 bind l refresh-client
 bind | split-window
-bind s split-window -v -c "#{pane_current_path}"
-bind v split-window -h -c "#{pane_current_path}"
+bind s run-shell "~/dotfiles/bin/tmux-sw-ssh.sh"
+bind v run-shell "~/dotfiles/bin/tmux-sw-ssh.sh -v"
 bind '"' choose-window
 bind -n C-h select-pane -L
 bind -n C-j select-pane -D
