--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -49,8 +49,8 @@ cyan = "#94e2d5"
 white = "#a6adc8"
 
 [shell]
-program = "/usr/bin/bash"
-args = ["--login","-i"]
+program = "/home/shoney/dotfiles/bin/tmux-main.sh"
+
 
 [keyboard]
 bindings = [
