--- a/tmux/.config/tmux/tmux-reset.conf
+++ b/tmux/.config/tmux/tmux-reset.conf
@@ -34,8 +34,9 @@ bind P set pane-border-status
 bind c kill-pane
 bind x swap-pane -D
 bind -n M-s choose-session
-bind C-p display-popup -E "nvim ~/.bashrc"
-bind C-l display-popup -E -w 90% -h 90% "/home/shoney/.local/bin/lazydocker"
+#bind C-p display-popup -E "nvim ~/.bashrc"
+#bind C-l display-popup -E -w 90% -h 90% "/home/shoney/.local/bin/lazydocker"
+bind S display-popup -E "/home/shoney/dotfiles/bin/tmux-ssh-menu.sh"
 bind R source-file ~/.tmux.conf
 bind K send-keys "clear"\; send-keys "Enter"
 bind-key -T copy-mode-vi v send-keys -X begin-selection
