--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -19,25 +19,25 @@ font pango:monospace 8
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
 #font pango:DejaVu Sans Mono 8
-set $mode_display Ext Screen
-mode "$mode_display" {
-    # Turn on DP-2-3 above laptop
-    bindsym v exec --no-startup-id xrandr --output DP-2-3 --auto --above eDP-1, mode "default"
-    # Turn off DP-2-3
-    bindsym x exec --no-startup-id xrandr --output DP-2-3 --off, mode "default"
 
-    # back to normal: Enter or Escape
-    bindsym Return mode "default"
-    bindsym Escape mode "default"
-}
-bindsym $mod+x mode "$mode_display"
+
+
+
+
+
+
+
+
+
+
+
 # Start XDG autostart .desktop files using dex. See a
 # https://wiki.archlinux.org/index.php/XDG_Autostart
 exec --no-startup-id dex --autostart --environment i3
 exec_always --no-startup-id i3-auto-tiling
 
 exec --no-startup-id picom --config ~/.config/picom/picom.conf
-
+exec_always --no-startup-id dunst &
 
 exec --no-startup-id feh --bg-scale /usr/share/backgrounds/warty-final-ubuntu.png
 # The combination of xss-lock, nm-applet and pactl is a popular choice, so
@@ -57,6 +57,13 @@ bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5% && polybar-msg hook volume 1
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && polybar-msg hook volume 1
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle
+
+
+# Increase brightness
+bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl s +10%
+
+# Decrease brightness
+bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl s 10%-
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
