--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -80,7 +80,7 @@ set -g status-left-length 100
 set -g status-right "#{E:@catppuccin_status_application}"
 set -g status-right "#{E:@catppuccin_status_directory}"
 # in .tmux.conf
-set -g status-right '#{@catppuccin_cpu_icon} #{cpu_percentage} GPU: #{gpu_percentage} '
+set -g status-right 'GPU: #{gpu_percentage} '
 #set -ag status-right "󰉋 #{pane_current_path}"
 set -ag status-right "#{E:@catppuccin_status_session}"
 #set -ag status-right "#{E:@catppuccin_status_cpu}"
