--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -7,14 +7,17 @@ cursor_shape beam
 cursor_trail 1
 
 # Padding (why weird value? consistency with foot)
-window_margin_width 21.75
+#window_margin_width 21.75
+
+window_margin_width 0
+window_padding_width 0
 
 # No stupid close confirmation
 confirm_os_window_close 0
 
 # Use fish shell
-shell /home/shoney/dotfiles/bin/tmux-main.sh
-
+#shell /home/shoney/dotfiles/bin/tmux-main.sh
+shell /usr/bin/fish
 
 # Copy
 map ctrl+c    copy_or_interrupt
