--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,8 +1,8 @@
 source-file ~/.config/tmux/tmux-reset.conf
-set-option -g default-shell /usr/bin/fish
+set-option -g default-shell /usr/bin/bash
 
 set-option -g default-terminal 'tmux-256color'
-set-option -g terminal-overrides ',xterm-256color:RGB'
+set-option -g terminal-overrides ',xterm-kitty:RGB'
 #set-option -g default-command "/home/shoney/.cargo/bin/nu --login"
 
 set -g mouse on 
@@ -33,8 +33,8 @@ set -g @plugin 'wfxr/tmux-fzf-url'
 set -g @plugin 'catppuccin/tmux#v2.1.3'
 set -g @plugin 'tmux-plugins/tmux-cpu'
 
-set -g @floax-width '80%'
-set -g @floax-height '80%'
+set -g @floax-width '95%'
+set -g @floax-height '95%'
 set -g @floax-border-color 'magenta'
 set -g @floax-text-color 'blue'
 set -g @floax-bind 'p'
