--- a/hypr/.config/hypr/hyprland/keybinds.conf
+++ b/hypr/.config/hypr/hyprland/keybinds.conf
@@ -25,12 +25,14 @@ bindit = ,Super_R, global, quickshell:workspaceNumber # [hidden]
 bind = Super, Tab, global, quickshell:overviewWorkspacesToggle # Toggle overview
 bindd = Super, V, Clipboard history >> clipboard, global, quickshell:overviewClipboardToggle # Clipboard history >> clipboard
 bindd = Super, Period, Emoji >> clipboard, global, quickshell:overviewEmojiToggle # Emoji >> clipboard
+
+bindd = Super, SPACE, App Search, global, quickshell:overviewAppToggle # Emoji >> clipboard
 bind = Super, A, global, quickshell:sidebarLeftToggle # Toggle left sidebar
 bind = Super+Alt, A, global, quickshell:sidebarLeftToggleDetach # [hidden]
 bind = Super, B, global, quickshell:sidebarLeftToggle # [hidden]
 bind = Super, O, global, quickshell:sidebarLeftToggle # [hidden]
 bindd = Super, N, Toggle right sidebar, global, quickshell:sidebarRightToggle # Toggle right sidebar
-bindd = Super, Slash, Toggle cheatsheet, global, quickshell:cheatsheetToggle # Toggle cheatsheet
+bindd = Super, F1, Toggle cheatsheet, global, quickshell:cheatsheetToggle # Toggle cheatsheet
 bindd = Super, K, Toggle on-screen keyboard, global, quickshell:oskToggle # Toggle on-screen keyboard
 bindd = Super, M, Toggle media controls, global, quickshell:mediaControlsToggle # Toggle media controls
 bind = Super, G, global, quickshell:overlayToggle # Toggle overlay
@@ -221,7 +223,7 @@ submap = global
 
 
 
-bind = Super, SPACE, exec, fuzzel
+#bind = Super, SPACE, exec, fuzzel
 
 ##! Session
 bindd = Super, L, Lock, exec, loginctl lock-session # Lock
