--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,5 +1,5 @@
 source-file ~/.config/tmux/tmux-reset.conf
-set-option -g default-shell /usr/bin/bash
+set-option -g default-shell /usr/bin/fish
 
 set-option -g default-terminal 'tmux-256color'
 set-option -g terminal-overrides ',xterm-kitty:RGB'
