--- a/hypr/.config/hypr/hyprland/rules.conf
+++ b/hypr/.config/hypr/hyprland/rules.conf
@@ -82,84 +82,84 @@ windowrulev2 = noshadow, floating:0
 workspace = special:special, gapsout:30
 
 # ######## Layer rules ########
-layerrule = xray 1, .*
-# layerrule = noanim, .*
-layerrule = noanim, walker
-layerrule = noanim, selection
-layerrule = noanim, overview
-layerrule = noanim, anyrun
-layerrule = noanim, indicator.*
-layerrule = noanim, osk
-layerrule = noanim, hyprpicker
+layerrule2 = xray 1, .*
+ layerrulev2 = noanim, .*
+layerrulev2 = noanim, walker
+layerrulev2 = noanim, selection
+layerrulev2 = noanim, overview
+layerrulev2 = noanim, anyrun
+ layerrulev2 = noanim, indicator.*
+ layerrulev2 = noanim, osk
+ layerrulev2 = noanim, hyprpicker
 
-layerrule = noanim, noanim
-layerrule = blur, gtk-layer-shell
-layerrule = ignorezero, gtk-layer-shell
-layerrule = blur, launcher
-layerrule = ignorealpha 0.5, launcher
-layerrule = blur, notifications
-layerrule = ignorealpha 0.69, notifications
-layerrule = blur, logout_dialog # wlogout
-
-# ags
-layerrule = animation slide left, sideleft.*
-layerrule = animation slide right, sideright.*
-layerrule = blur, session[0-9]*
-layerrule = blur, bar[0-9]*
-layerrule = ignorealpha 0.6, bar[0-9]*
-layerrule = blur, barcorner.*
-layerrule = ignorealpha 0.6, barcorner.*
-layerrule = blur, dock[0-9]*
-layerrule = ignorealpha 0.6, dock[0-9]*
-layerrule = blur, indicator.*
-layerrule = ignorealpha 0.6, indicator.*
-layerrule = blur, overview[0-9]*
-layerrule = ignorealpha 0.6, overview[0-9]*
-layerrule = blur, cheatsheet[0-9]*
-layerrule = ignorealpha 0.6, cheatsheet[0-9]*
-layerrule = blur, sideright[0-9]*
-layerrule = ignorealpha 0.6, sideright[0-9]*
-layerrule = blur, sideleft[0-9]*
-layerrule = ignorealpha 0.6, sideleft[0-9]*
-layerrule = blur, indicator.*
-layerrule = ignorealpha 0.6, indicator.*
-layerrule = blur, osk[0-9]*
-layerrule = ignorealpha 0.6, osk[0-9]*
-
-# Quickshell
-layerrule = blurpopups, quickshell:.*
-layerrule = blur, quickshell:.*
-layerrule = ignorealpha 0.79, quickshell:.*
-layerrule = animation slide, quickshell:bar
-layerrule = noanim, quickshell:actionCenter
-layerrule = animation slide bottom, quickshell:cheatsheet
-layerrule = animation slide bottom, quickshell:dock
-layerrule = animation popin 120%, quickshell:screenCorners
-layerrule = noanim, quickshell:lockWindowPusher
-layerrule = animation fade, quickshell:notificationPopup
-layerrule = noanim, quickshell:overlay
-layerrule = ignorealpha 1, quickshell:overlay
-layerrule = noanim, quickshell:overview
-layerrule = animation slide bottom, quickshell:osk
-layerrule = noanim, quickshell:polkit
-layerrule = xray 0, quickshell:popup # No weird color for bar tooltips (this in theory should suffice)
-layerrule = ignorealpha 1, quickshell:popup # No weird color for bar tooltips (but somehow this is necessary)
-layerrule = ignorealpha 1, quickshell:mediaControls # Same as above
-layerrule = animation slide, quickshell:reloadPopup
-layerrule = noanim, quickshell:regionSelector
-layerrule = noanim, quickshell:screenshot
-layerrule = blur, quickshell:session
-layerrule = noanim, quickshell:session
-layerrule = ignorealpha 0, quickshell:session
-layerrule = animation slide right, quickshell:sidebarRight
-layerrule = animation slide left, quickshell:sidebarLeft
-layerrule = animation slide, quickshell:verticalBar
-layerrule = animation slide top, quickshell:wallpaperSelector
-layerrule = noanim, quickshell:wNotificationCenter
-layerrule = noanim, quickshell:wOnScreenDisplay
-layerrule = noanim, quickshell:wStartMenu
-layerrule = ignorealpha 0, quickshell:wTaskView
-layerrule = noanim, quickshell:wTaskView
-
-# Launchers need to be FAST
-layerrule = noanim, gtk4-layer-shell
+ layerrulev2 = noanim, noanim
+ layerrulev2 = blur, gtk-layer-shell
+ layerrulev2 = ignorezero, gtk-layer-shell
+ layerrulev2 = blur, launcher
+ layerrulev2 = ignorealpha 0.5, launcher
+ layerrulev2 = blur, notifications
+ layerrulev2 = ignorealpha 0.69, notifications
+ layerrulev2 = blur, logout_dialog # wlogout
+#
+# # ags
+layerrulev2 = animation slide left, sideleft.*
+layerrulev2 = animation slide right, sideright.*
+layerrulev2 = blur, session[0-9]*
+layerrulev2 = blur, bar[0-9]*
+layerrulev2 = ignorealpha 0.6, bar[0-9]*
+layerrulev2 = blur, barcorner.*
+layerrulev2 = ignorealpha 0.6, barcorner.*
+layerrulev2 = blur, dock[0-9]*
+layerrulev2 = ignorealpha 0.6, dock[0-9]*
+layerrulev2 = blur, indicator.*
+layerrulev2 = ignorealpha 0.6, indicator.*
+layerrulev2 = blur, overview[0-9]*
+layerrulev2 = ignorealpha 0.6, overview[0-9]*
+layerrulev2 = blur, cheatsheet[0-9]*
+layerrulev2 = ignorealpha 0.6, cheatsheet[0-9]*
+layerrulev2 = blur, sideright[0-9]*
+layerrulev2 = ignorealpha 0.6, sideright[0-9]*
+layerrulev2 = blur, sideleft[0-9]*
+layerrulev2 = ignorealpha 0.6, sideleft[0-9]*
+layerrulev2 = blur, indicator.*
+layerrulev2 = ignorealpha 0.6, indicator.*
+layerrulev2 = blur, osk[0-9]*
+layerrulev2 = ignorealpha 0.6, osk[0-9]*
+#
+# # Quickshell
+layerrulev2 = blurpopups, quickshell:.*
+layerrulev2 = blur, quickshell:.*
+layerrulev2 = ignorealpha 0.79, quickshell:.*
+layerrulev2 = animation slide, quickshell:bar
+# layerrulev2 = noanim, quickshell:actionCenter
+ layerrulev2 = animation slide bottom, quickshell:cheatsheet
+ layerrulev2 = animation slide bottom, quickshell:dock
+ layerrulev2 = animation popin 120%, quickshell:screenCorners
+ layerrulev2 = noanim, quickshell:lockWindowPusher
+ layerrulev2 = animation fade, quickshell:notificationPopup
+ layerrulev2 = noanim, quickshell:overlay
+ layerrulev2 = ignorealpha 1, quickshell:overlay
+ layerrulev2 = noanim, quickshell:overview
+ layerrulev2 = animation slide bottom, quickshell:osk
+ layerrulev2 = noanim, quickshell:polkit
+ layerrulev2 = xray 0, quickshell:popup # No weird color for bar tooltips (this in theory should suffice)
+ layerrulev2 = ignorealpha 1, quickshell:popup # No weird color for bar tooltips (but somehow this is necessary)
+ layerrulev2 = ignorealpha 1, quickshell:mediaControls # Same as above
+ layerrulev2 = animation slide, quickshell:reloadPopup
+ layerrulev2 = noanim, quickshell:regionSelector
+ layerrulev2 = noanim, quickshell:screenshot
+ layerrulev2 = blur, quickshell:session
+ layerrulev2 = noanim, quickshell:session
+ layerrulev2 = ignorealpha 0, quickshell:session
+ layerrulev2 = animation slide right, quickshell:sidebarRight
+ layerrulev2 = animation slide left, quickshell:sidebarLeft
+ layerrulev2 = animation slide, quickshell:verticalBar
+ layerrulev2 = animation slide top, quickshell:wallpaperSelector
+ layerrulev2 = noanim, quickshell:wNotificationCenter
+ layerrulev2 = noanim, quickshell:wOnScreenDisplay
+ layerrulev2 = noanim, quickshell:wStartMenu
+ layerrulev2 = ignorealpha 0, quickshell:wTaskView
+ layerrulev2 = noanim, quickshell:wTaskView
+#
+# # Launchers need to be FAST
+ layerrulev2 = noanim, gtk4-layer-shell
