--- a/hypr/.config/hypr/hyprland/keybinds.conf
+++ b/hypr/.config/hypr/hyprland/keybinds.conf
@@ -189,8 +189,8 @@ bindp = Super, code:81, exec, ~/.config/hypr/hyprland/scripts/workspace_action.s
 bindp = Super, code:90, exec, ~/.config/hypr/hyprland/scripts/workspace_action.sh workspace 10 # [hidden]
 
 #/# bind = Ctrl+Super, ←/→,, # Focus left/right
-bind = Ctrl+Super, Right, workspace, r+1 # [hidden]
-bind = Ctrl+Super, Left, workspace, r-1 # [hidden]
+bind = Super, Right, workspace, r+1 # [hidden]
+bind = Super, Left, workspace, r-1 # [hidden]
 #/# bind = Ctrl+Super+Alt, ←/→,, # [hidden] Focus busy left/right
 bind = Ctrl+Super+Alt, Right, workspace, m+1 # [hidden]
 bind = Ctrl+Super+Alt, Left, workspace, m-1 # [hidden]
@@ -271,3 +271,4 @@ bind = Ctrl+Shift, Escape, exec, ~/.config/hypr/hyprland/scripts/launch_first_av
 ## Make window not amogus large
 bind = Ctrl+Super, Backslash, resizeactive, exact 640 480 # [hidden]
 
+bind = Super, S, exec, hyprctl dispatch workspace 10 && slack
